--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My Website</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
@@ -33,11 +35,11 @@
     <header class="p3">
         <div class="container-fluid">
             <div class="row py-4 p-xl-4 mx-xl-4 justify-content-center">
-                <div class=" text-left col-4 align-self-center">
+                <div class=" text-left col-4 align-self-center" data-aos="flip-right" data-aos-duration="2500">
                     <a id="headerlogo" class="align-self-center text-decoration-none mx-3 display-4" href="#">My
                         Website</a>
                 </div>
-                <div id="nav" class="d-none d-xl-block col-8 text-right align-self-center">
+                <div id="nav" class="d-none d-xl-block col-8 text-right align-self-center" data-aos="zoom-in" data-aos-duration="1500">
                     <a class="text-decoration-none mx-3" href="#">Home</a>
                     <a class="text-decoration-none mx-3" href="#">Portfolio</a>
                     <a class="text-decoration-none mx-3" href="#">Stuff</a>
@@ -58,7 +60,7 @@
     <section id="hero">
         <div class="container-fluid p-xl-5">
             <div class="row mx-xl-4 align-items-center py-5 ">
-                <div class="col-12 text-center py-5 my-5 col-xl-6">
+                <div class="col-12 text-center py-5 my-5 col-xl-6" data-aos="zoom-out-up" data-aos-duration="1500" data-aos-delay="1000">
                     <h2 class="mx-3 p-4 p-xl-5 text-light">We strive to create all of our creation exquisite.</h2>
                 </div>
             </div>
@@ -69,25 +71,25 @@
     <section id="about">
         <div class="container-fluid p-5">
             <div class="row mx-4 py-5">
-                <div class="col-12 col-xl-3 text-center">
+                <div class="col-12 col-xl-3 text-center" data-aos="zoom-in-right" data-aos-duration="1000">
                     <img class="img-fluid" src="imgs/icon-1.png" alt="">
                     <h2 class="py-3">Purpose</h2>
                     <p>Nunc at tincidunt enim, et sollicitudin mauris. Proin faucibus erat tellus, id lacinia massa
                         vehicula feugiat. Cras aliquam odio non sapien euismod, non sagittis diam commodo</p>
                 </div>
-                <div class="col-12 col-xl-3 text-center">
+                <div class="col-12 col-xl-3 text-center" data-aos="zoom-in-right" data-aos-duration="1500">
                     <img class="img-fluid" src="imgs/icon-2.png" alt="">
                     <h2 class="py-3">Quality</h2>
                     <p>Nunc at tincidunt enim, et sollicitudin mauris. Proin faucibus erat tellus, id lacinia massa
                         vehicula feugiat. Cras aliquam odio non sapien euismod, non sagittis diam commodo</p>
                 </div>
-                <div class="col-12 col-xl-3 text-center">
+                <div class="col-12 col-xl-3 text-center" data-aos="zoom-in-right" data-aos-duration="2000">
                     <img class="img-fluid" src="imgs/icon-3.png" alt="">
                     <h2 class="py-3">Function</h2>
                     <p>Nunc at tincidunt enim, et sollicitudin mauris. Proin faucibus erat tellus, id lacinia massa
                         vehicula feugiat. Cras aliquam odio non sapien euismod, non sagittis diam commodo</p>
                 </div>
-                <div class="col-12 col-xl-3 text-center">
+                <div class="col-12 col-xl-3 text-center" data-aos="zoom-in-right" data-aos-duration="2000">
                     <img class="img-fluid" src="imgs/icon-4.png" alt="">
                     <h2 class="py-3">Elegant</h2>
                     <p>Nunc at tincidunt enim, et sollicitudin mauris. Proin faucibus erat tellus, id lacinia massa
@@ -107,22 +109,22 @@
                     <h3 class="text-uppercase">Recent Work</h3>
                     <hr>
                 </div>
-                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3">
+                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3" data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="1000">
                     <img class="img-fluid" src="imgs/bike-400x340.jpg" alt="">
                     <h4 class="my-2">Green Bike</h4>
                     <p>Beautiful, Travel</p>
                 </div>
-                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3">
+                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3" data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="2000">
                     <img class="img-fluid" src="imgs/surf-400x340.jpg" alt="">
                     <h4 class="my-2">Solt Of The Earth</h4>
                     <p>Beautiful, Travel</p>
                 </div>
-                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3">
+                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3" data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="3000">
                     <img class="img-fluid" src="imgs/hills-400x340.jpg" alt="">
                     <h4 class="my-2">Montain High</h4>
                     <p>Travel</p>
                 </div>
-                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3">
+                <div class="col-12 text-sm-center col-md-6 col-xl-3 py-3" data-aos="flip-left"data-aos-easing="ease-out-cubic"data-aos-duration="3000">
                     <img class="img-fluid" src="imgs/surf-400x340.jpg" alt="">
                     <h4 class="my-2">When A Three Falls</h4>
                     <p>Beautifull</p>
@@ -138,21 +140,21 @@
                     <h3 class="text-uppercase">from the blog</h3>
                     <hr>
                 </div>
-                <div class="col-12 col-xl-4 py-3">
+                <div class="col-12 col-xl-4 py-3" data-aos="zoom-in" data-aos-duration="1500">
                     <img class="img-fluid" src="imgs/cow-640x340.jpg" alt="">
                     <h4 class="my-2">How Now</h4>
                     <p>Posted on October 28, 2020</p>
                     <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris
                         rhoncus velit in arcu vehicula, et bibendum est ultricies. Nullam eu finibus arcu...</p>
                 </div>
-                <div class="col-12 col-xl-4 py-3">
+                <div class="col-12 col-xl-4 py-3" data-aos="zoom-in" data-aos-duration="2000">
                     <img class="img-fluid" src="imgs/sunrise-640x340.jpg" alt="">
                     <h4 class="my-2">Adrift By Simon Christen</h4>
                     <p>Posted on September 29, 2020</p>
                     <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Mauris
                         rhoncus velit in arcu vehicula, et bibendum est ultricies. Nullam eu finibus arcu...</p>
                 </div>
-                <div class="col-12 col-xl-4 py-3">
+                <div class="col-12 col-xl-4 py-3" data-aos="zoom-in" data-aos-duration="2500">
                     <img class="img-fluid" src="imgs/grass-640x340.jpg" alt="">
                     <h4 class="my-2">A Walk In The Park</h4>
                     <p>Posted on August 10, 2020</p>
@@ -168,7 +170,7 @@
     <footer>
         <div class="container-fluid">
             <div class="row mx-5 py-5 text-light">
-                <div class="col-12 col-xl-4 py-5">
+                <div class="col-12 col-xl-4 py-5" data-aos="zoom-in-right">
                     <h4>My Website</h4>
                     <p class="py-4 text-muted">Aliquam eget risus eu ligula commodo condimentum. Vestibulum consectetur
                         vehicula dolor, vitae
@@ -178,7 +180,7 @@
                         Praesent pulvinar, ipsum nec blandit congue, enim tellus vehicula urna, id posuere libero ligula
                         nec lorem.</p>
                 </div>
-                <div class="col-12 col-xl-3 offset-xl-1 my-5">
+                <div class="col-12 col-xl-3 offset-xl-1 my-5" data-aos="fade-up" data-aos-duration="1000">
                     <h4 class="pb-3">Recent Posts</h4>
                     <hr color="#b9b9b9">
                     <a href="#">How Now</a>
@@ -187,7 +189,7 @@
                     <a href="#">Time To Think</a>
                     <a href="#">Field Of Dreams</a>
                 </div>
-                <div id="smallpad" class="col-12 col-xl-3 my-5">
+                <div id="smallpad" class="col-12 col-xl-3 my-5" data-aos="fade-up" data-aos-duration="1500">
                     <h4 class="pb-3">Recent Work</h4>
                     <hr color="#b9b9b9">
                     <a href="#">Beautiful</a>
@@ -252,6 +254,10 @@
 
 
     </script>
+
+<script>
+    AOS.init();
+  </script>
 
 
 
